--- a/votaUnicamp.Rmd
+++ b/votaUnicamp.Rmd
@@ -48,23 +48,32 @@ A proposta de trabalho é de realizar análises estatísticas sobre os resultado
 pesquisa efetuada. A variável de interesse são as respostas negativas. O grau que nos interessa  
 é o da Graduação.
 
+```{r, echo = FALSE}
+setwd(choose.dir()) #escolha o diretório onde os arquivos do github foram clonados
+
+```
+
+
+```{r instalacaoPacotesUtilizados,echo=FALSE,eval=FALSE}
 ## Setup
 
 ### Pacotes utilizados 
 
-```{r instalacaoPacotesUtilizados,echo=FALSE,eval=FALSE}
 #troque eval para true para rodar o programa e instalar os pacotes
 install.packages(
   'printr',
   type = 'source',
   repos = c('http://yihui.name/xran', 'http://cran.rstudio.com')
 )
-pacotes = c("tm","SnowballC","wordcloud","RColorBrewer","RCurl","XML","stringr","rvest","googleVis","leaflet","pracma","dplyr","d3heatmap","RColorBrewer")
+pacotes = c("tm","SnowballC","wordcloud","RColorBrewer","RCurl","XML","stringr","rvest","googleVis","leaflet","pracma","dplyr","d3heatmap","RColorBrewer", "ggrepel", "ggplot2", "ggmap")
 install.packages(pacotes)
 ```
 
+
+```{r codigo_wordcloud, echo = FALSE, eval = FALSE, message=FALSE}
 ### Funções auxiliares
-```{r codigo_wordcloud}
+
+
 #Site que proveu a função abaixo
 #http://www.sthda.com/english/wiki  /word-cloud-generator-in-r-one-killer-function-to-do-everything#-you-need
 
@@ -151,13 +160,13 @@ html_to_text<-function(url){
 
 ```
 
-```{r porcentagem}
+```{r porcentagem, echo = FALSE}
 percent <- function(x, digits = 2, format = "f", ...) {
   paste0(formatC(100 * x, format = format, digits = digits, ...), "%")
 }
 ```
 
-```{r input, message=FALSE}
+```{r input, message=FALSE, echo = FALSE}
 #Sys.setlocale(locale='UTF-8')
 Sys.setlocale(category = "LC_TIME", locale="Portuguese_Brazil.1252")
 #alguns pacotes utilizados
@@ -172,12 +181,13 @@ prop_tbl = html_table(page)[[1]]
 tbl = html_table(page)[[2]]
 names(tbl)=c("Curso","Total","Sim","Abstenção","Não")
 tbl$Curso=repair_encoding(tbl$Curso)
-head(tbl)
+#head(tbl)
 ```
+
+```{r format, echo = FALSE}
 
 ## Formatação de Dados
 
-```{r format}
 library(printr)
 mytbl = data.frame(codigo=as.integer(str_extract(tbl$Curso, "^\\d+")),
                    nivel=NA,
@@ -193,12 +203,14 @@ nivel[is.na(nivel)] = "Graduacao"
 mytbl$nivel = nivel
 rm(nivel)
 mytbl$curso = gsub("(Mes|Dou).+ em (.*)$", "\\2", mytbl$curso)
-head(mytbl)
+#head(mytbl)
 ```
 
+
+
+```{r stats, echo = FALSE}
 ##Intervalo de Confiança
 
-```{r stats}
 p = with(mytbl, nao/(total))
 mes = qnorm(.975)*sqrt(1/(4*mytbl$total))
 ics = cbind(round(pmax(p-mes, 0),3), round(pmin(p+mes, 1),3))
@@ -209,22 +221,23 @@ mytbl = cbind(mytbl, ics)
 
 
 
-```{r AlunosRegularesGraducao}
-setwd(choose.dir()) #escolha o diretório onde os arquivos do github foram clonados
+```{r AlunosRegularesGraducao, echo = FALSE}
 fvotosg = read.csv2("Matriculados_em_Cursos_Regulares_Graduação_Por_Curso_e_Turno_2016.csv") #esse arquivo contém a quantidade de alunos regulares da graduação disponível em <http://www.siarh.unicamp.br/indicadores/View.jsf?categoria=PUB_ACAD_MATRICULADOS>
 Total_de_Alunosg = ifelse(is.na(fvotosg[,3]),0,fvotosg[,3]) + ifelse(is.na(fvotosg[,4]),0,fvotosg[,4])
 alunosregularesGra = data.frame(cbind(fvotosg[,c(1,2)],Total_de_Alunosg))
 ```
 
-```{r AlunosRegularesPosGraduacao}
+```{r AlunosRegularesPosGraduacao, echo = FALSE}
 fvotosp = read.csv2("Matriculados_em_Cursos_Regulares_Pós_Graduação_Stricto_Sensu_Por_Curso_e_Turno_2016.csv") #esse arquivo contém a quantidade de alunos regulares da Pós graduação disponível em <http://www.siarh.unicamp.br/indicadores/View.jsf?categoria=PUB_ACAD_MATRICULADOS>
 Total_de_alunosp = ifelse(is.na(fvotosp[,3]),0,fvotosp[,3]) + ifelse(is.na(fvotosp[,4]),0,fvotosp[,4])
 alunosregularesPos = data.frame(cbind(fvotosp[,c(1,2)],Total_de_alunosp))
 ```
 
-Adição de algumas informações relacionadas aos cursos de graduação:
 
-```{r}
+
+```{r, echo = FALSE}
+#Adição de algumas informações relacionadas aos cursos de graduação:
+
 suppressPackageStartupMessages(library(pracma))#usada para comparar strings
 suppressPackageStartupMessages(library(dplyr))#usada para filtrar o data.frame
 library(printr)
@@ -243,48 +256,21 @@ for (i in 1:nrow(mytblgrad)){
   }
   
 }
-head(mytblgrad)
+#head(mytblgrad)
 ```
 
-Tabela com dados referentes apenas a pós graduação:
 
-```{r}
+
+```{r, echo = FALSE}
+#Tabela com dados referentes apenas a pós graduação:
+
 library(printr)
 mytblpos = filter(mytbl,nivel=="Mestrado" | nivel=="Doutorado")
-head(mytblpos)
+#head(mytblpos)
 ```
 
 
 ##Estatísticas Descritivas
-
-
-### Estatística geral 
-
-Proporção de votos:
-
-```{r prop_geral, eval= FALSE}
-
-tabela.inst = read.csv2(file.choose())
-
-
-for(i in 1:length(table(tabela.inst$Sigla.Instituto))){
-  
-  for(j in 1:length(tabela.inst$Curso)){
-  
-  
-  if(as.character(tabela.inst$Curso)[i] == alunosregularesGra$Nome.Completo.do.Curso){
-    total.alunos = 
-  }
-    
-    
-  }
-}
-  
-
-
-
-
-```
 
 #### Gráfico de barras
 
@@ -292,17 +278,17 @@ Gráfico de barras correspondente ao total de votos respectivos a cada categoria
 respostas positivas, negativas, abstencionistas relacionadas a implementação de 
 greve estudantil na Universidade Estadual de Campinas.
 
-``` {r barras}
+``` {r barras, echo = FALSE, message = FALSE}
 barplot(c(sum(mytbl$sim),sum(mytbl$nao),sum(mytbl$abstencao)),legend=colnames(mytbl[5:7]),col=c("gold1","darkorchid2","antiquewhite2"),ylab = "Frequência", main =  "Total de Votos")
 
 ```
 
-```{r tabela_geral}
+```{r tabela_geral, echo = FALSE, message = FALSE}
 library(DT)
 datatable(data=mytbl,class = 'cell-border stripe')
 ```
 
-```{r }
+```{r, echo = FALSE, message=FALSE}
 library(d3heatmap)
 library(RColorBrewer)
 d3heatmap(mytbl[5:7],col=rev(brewer.pal(12,"Paired")),yaxis_width = 200)
@@ -313,7 +299,7 @@ d3heatmap(mytbl[5:7],col=rev(brewer.pal(12,"Paired")),yaxis_width = 200)
 
 Quantidade de cursos representados de acordo com nível de especialização, quantidade de pessoas 
 votantes respectivos a cada grau: 
-```{r}
+```{r, echo =FALSE}
 library(printr)
 
 Dados_nivel_estudo=data.frame(table(mytbl$nivel),c(sum(filter(mytbl,nivel=="Doutorado")$sim),
@@ -333,8 +319,34 @@ names(Dados_nivel_estudo)=c("Curso","Qtde de cursos representados","Sim","Nao","
 Dados_nivel_estudo
 ```
 
+
+```{r Institutos, echo = FALSE}
 ### Estatísticas por área
 
+## Estatísticas por Instituto
+
+
+cursosPorInstituto = data.frame(read.csv2("CodigoCursosPorInstitutos.csv",header = TRUE))
+#head(cursosPorInstituto)
+totalInstituto = as.integer(rep(0,ncol(cursosPorInstituto)))
+naoInstituto = as.integer(rep(0,ncol(cursosPorInstituto)))
+for(i in 1:ncol(cursosPorInstituto)){
+  j=1
+  A=FALSE
+  while(A==FALSE & j<=nrow(cursosPorInstituto)){
+  naoInstituto[i] = ifelse(length(filter(mytblgrad,codigo==cursosPorInstituto[j,i])$nao)!=0,filter(mytblgrad,codigo==cursosPorInstituto[j,i])$nao,0) + naoInstituto[i]
+
+totalInstituto[i] = ifelse(length(filter(mytblgrad,codigo==cursosPorInstituto[j,i])$total)!=0,filter(mytblgrad,codigo==cursosPorInstituto[j,i])$total,0) + totalInstituto[i]
+  
+  j=j+1
+  A=is.na(cursosPorInstituto[j,i])
+  }
+}
+propInstituto = naoInstituto/totalInstituto
+
+data.Instituto = data.frame(cbind(colnames(cursosPorInstituto),naoInstituto,totalInstituto,round(propInstituto,3)))
+
+```
 
 
 ### Estatísticas por curso
@@ -347,7 +359,7 @@ selectInput("curso","Escolha o curso desejado:", choices=slccursos)
 #textInput("curso","Escolha o curso desejado:",)
 ```
 
-```{r,echo=FALSE,message=FALSE}
+```{r,echo=FALSE,message=FALSE, echo = FALSE}
 
 renderTable(mytbl[as.integer(input$curso),5:10])
 
@@ -358,9 +370,12 @@ renderPlot(barplot(as.integer(mytbl[as.integer(input$curso),5:7]),main=paste(myt
 options=list(width="100%", height="100%")
 ```
 
+
+
+```{r plot_gauge, echo = FALSE, message = FALSE}
+
 ## Gauge Plots
 
-```{r plot_gauge}
 tbl0 = subset(mytbl, nivel=='Graduacao')
 tbl0$pnao = round(tbl0$nao/tbl0$total*100, 0)
 gauge = gvisGauge(tbl0[, c('curso', 'pnao')], 'curso', 'nao',
@@ -370,28 +385,20 @@ gauge = gvisGauge(tbl0[, c('curso', 'pnao')], 'curso', 'nao',
 plot(gauge)
 ```
 
-## Obtenção de Dados Geográficos
-
-Obter localizações (lat/lon) por meio do OpenStreet Maps:
-
-- Abrir OpenStreet Maps (OSM) em (http://www.openstreetmap.org/#map=16/-22.8173/-47.0677)
-- Dar zoom máximo no instituto de interesse
-- Olhar o endereço na barra de endereço após o zoom
-- Atualizar o data.frame abaixo com as informações
-
-```{r enderecos}
-
+```{r enderecos, echo = FALSE, message = FALSE}
 ends = read.table('institutos.tab', sep='\t', header=TRUE)
+teste = data.Instituto[-c(1,2,25,14,13,14,11),]
 
-v <- c(0.1,0.2,0.4,0.9,0.6,0.1,0.2,0.4,0.9,0.6,0.1,0.2,0.22,0.9,1,0.8,0.2,0.7,0.11)
+ v <- c(1,1,0.909,0.857,0.588,0.83 ,0.875, 0.684 ,0.636, 0.091, 0.565, 0.72,  0.579,0.222, 0.235, 0.444, 0.25,  0.769, 0.606)
 
+
+library(ggrepel)
 library(ggmap)
-library(rworldmap)
 library(ggplot2)
 
-data <- data.frame(lon=ends$lon, lat=ends$lat , Proporcao =v)
+data <- data.frame(lon=ends$lon, lat=ends$lat , Proporcao = v)
 
-myMap = get_map(location = c(lon = -47.0647206, lat = -22.8184393), zoom = 14) #Mapa da Unicamp
+myMap = get_map(location = c(lon = -47.06545115, lat = -22.82270669), zoom = 15) #Mapa da Unicamp
 
 #ggmap(myMap)+
 #geom_point(aes(x = lon, y = lat, size=0.4*sqrt(v)),
@@ -399,8 +406,6 @@ myMap = get_map(location = c(lon = -47.0647206, lat = -22.8184393), zoom = 14) #
 #scale_size(range=c(3,20), name="Proporção")
 
 ggmap(myMap, extent = "device",ylab = "Latitude", xlab = "Longitude")+
- geom_point(aes(x = lon, y = lat, colour = Proporcao, size= Proporcao),
- data = data, alpha = .5)+
-  scale_colour_continuous(low = "red", high = "blue", space = "Lab", guide = "colorbar")
-
+ geom_point(aes(x = lon, y = lat,colour = Proporcao, size= Proporcao),
+ data = data, alpha = .5)+ scale_colour_continuous(low = "red", high = "blue", space = "Lab", guide = "colorbar") + geom_label_repel(data = ends, aes(x = lon, y = lat, label = instituto),  fill = "white") + labs(title="Proporção de votos contra ")
 ```
