correções e complementação do trabalho
acrescentei o meu codigo e o do henrique

--- a/votaUnicamp.Rmd
+++ b/votaUnicamp.Rmd
@@ -1,11 +1,10 @@
 ---
 title: "Vota Unicamp!"
-author: "Guilherme Pazian      RA:160323
-         Henrique Capatto      RA:146406
-         Matheus Gomes         RA:156751
-         Murilo Salgado Razoli RA:150987
-         Wellington Tanaka     RA:093259
-         "
+author: -Guilherme Pazian      RA:160323
+        -Henrique Capatto      RA:146406
+        -Matheus Gomes         RA:156751
+        -Murilo Salgado Razoli RA:150987
+        -Wellington Tanaka     RA:093259
 runtime: shiny
 output: html_document
 ---
@@ -70,7 +69,7 @@ install.packages(pacotes)
 ```
 
 
-```{r codigo_wordcloud, echo = FALSE, eval = FALSE, message=FALSE}
+```{r codigo_wordcloud, eval=FALSE,echo = FALSE, eval = FALSE, message=FALSE}
 ### Funções auxiliares
 
 
@@ -174,10 +173,10 @@ suppressPackageStartupMessages(library(stringr))
 suppressPackageStartupMessages(library(rvest))
 suppressPackageStartupMessages(library(googleVis))
 suppressPackageStartupMessages(library(leaflet))
-suppressPackageStartupMessages(library(printr))
 #página da web ler
 page = read_html('http://votaunicamp.herokuapp.com/prev_results/')
 prop_tbl = html_table(page)[[1]]
+names(prop_tbl)=c("Total","Sim","Abstenções","Não")
 tbl = html_table(page)[[2]]
 names(tbl)=c("Curso","Total","Sim","Abstenção","Não")
 tbl$Curso=repair_encoding(tbl$Curso)
@@ -188,7 +187,6 @@ tbl$Curso=repair_encoding(tbl$Curso)
 
 ## Formatação de Dados
 
-library(printr)
 mytbl = data.frame(codigo=as.integer(str_extract(tbl$Curso, "^\\d+")),
                    nivel=NA,
                    curso=gsub("^(\\d+) - (.*)$", "\\2", tbl$Curso),
@@ -230,7 +228,9 @@ alunosregularesGra = data.frame(cbind(fvotosg[,c(1,2)],Total_de_Alunosg))
 ```{r AlunosRegularesPosGraduacao, echo = FALSE}
 fvotosp = read.csv2("Matriculados_em_Cursos_Regulares_Pós_Graduação_Stricto_Sensu_Por_Curso_e_Turno_2016.csv") #esse arquivo contém a quantidade de alunos regulares da Pós graduação disponível em <http://www.siarh.unicamp.br/indicadores/View.jsf?categoria=PUB_ACAD_MATRICULADOS>
 Total_de_alunosp = ifelse(is.na(fvotosp[,3]),0,fvotosp[,3]) + ifelse(is.na(fvotosp[,4]),0,fvotosp[,4])
-alunosregularesPos = data.frame(cbind(fvotosp[,c(1,2)],Total_de_alunosp))
+alunosregularesPos = data.frame
+
+codigos=na.omit(stack(read.csv2("CodigoCursosPorInstitutos.csv")))
 ```
 
 
@@ -249,24 +249,21 @@ for (i in 1:nrow(mytblgrad)){
   for(j in 1:nrow(alunosregularesGra)){
     if(strcmp(as.character(mytblgrad[i,3]),
               as.character(alunosregularesGra[j,1]))=='TRUE'| (as.character(mytblgrad[i,3])=="Superior Tecn. Análise e Desenv.Sistemas" & as.character(alunosregularesGra[j,1])=="Curso Superior de Tecnologia em Análise e Desenvolvimento de Sistemas")| (as.character(mytblgrad[i,3])=="Matemática/Física/Mat.Apl. e Comp" & as.character(alunosregularesGra[j,1])=="Matemática/Física/Matemática Aplicada e Computacional")){
-        mytblgrad[i,11]=alunosregularesGra[j,3]
-        mytblgrad[i,12]=as.character(alunosregularesGra[j,2])
+        mytblgrad[i,11]=as.character(alunosregularesGra[j,2])
+        mytblgrad[i,12]=alunosregularesGra[j,3]
     }  
   
   }
   
 }
-#head(mytblgrad)
-```
 
 
-
-```{r, echo = FALSE}
-#Tabela com dados referentes apenas a pós graduação:
-
-library(printr)
-mytblpos = filter(mytbl,nivel=="Mestrado" | nivel=="Doutorado")
-#head(mytblpos)
+for(i in 1:nrow(mytblgrad)){
+  for(j in 1:nrow(codigos)){
+    if(mytblgrad[i,1]==codigos[j,1])
+      mytblgrad[i,13]=as.character(codigos[j,2])
+  }
+}
 ```
 
 
@@ -274,21 +271,23 @@ mytblpos = filter(mytbl,nivel=="Mestrado" | nivel=="Doutorado")
 
 #### Gráfico de barras
 
+
+```{r tabela_prop_geral, echo = FALSE, message = FALSE}
+library(printr)
+prop_tbl
+```
+
 Gráfico de barras correspondente ao total de votos respectivos a cada categoria,
 respostas positivas, negativas, abstencionistas relacionadas a implementação de 
 greve estudantil na Universidade Estadual de Campinas.
+
 
 ``` {r barras, echo = FALSE, message = FALSE}
 barplot(c(sum(mytbl$sim),sum(mytbl$nao),sum(mytbl$abstencao)),legend=colnames(mytbl[5:7]),col=c("gold1","darkorchid2","antiquewhite2"),ylab = "Frequência", main =  "Total de Votos")
 
 ```
 
-```{r tabela_geral, echo = FALSE, message = FALSE}
-library(DT)
-datatable(data=mytbl,class = 'cell-border stripe')
-```
-
-```{r, echo = FALSE, message=FALSE}
+```{r, eval=FALSE ,echo = FALSE, message=FALSE}
 library(d3heatmap)
 library(RColorBrewer)
 d3heatmap(mytbl[5:7],col=rev(brewer.pal(12,"Paired")),yaxis_width = 200)
@@ -320,6 +319,69 @@ Dados_nivel_estudo
 ```
 
 ### Estatísticas por área
+
+Dentro do ambiente universitário, existe uma hipótese levantada por muitos de que as ciências humanas e as artes tender a favorabilidade em se fazer greves e por outras pautas relacionadas ao pensamento de esquerda, enquanto as exatas e tecnológicas são tendenciosas ao pensamento mais conservador.
+
+Portanto, há uma "curiosidade" em testarmos a existência de discrepâncias entre
+as áreas do conhecimento. Na UNICAMP, a divisão entre elas se dá na forma de:
+  Artes, Biológicas, Exatas, Humanas, Tecnológicas.
+
+Logo, como hipóteses tem-se:
+  
+  Hipótese nula: $H_0=$não há diferença entre de votos entre as áreas
+
+Hipótese alternativa: $H_1=$ há diferença entre as áreas
+
+```{r data_frames_areas,echo=FALSE}
+#filtragem da tabela mytblgrad para as referidas áreas
+area_de_estudo=read.csv2("QtdAlunosporArea.csv")
+
+Humanas=filter(mytblgrad,area == "Humanas")
+
+Tecnologicas=filter(mytblgrad,area=="Tecnológicas")
+
+Exatas=filter(mytblgrad,area=="Exatas")
+
+Biologicas=filter(mytblgrad,area=="Biológicas")
+
+Artes=filter(mytblgrad,area=="Artes")
+
+alpha=.05
+```
+
+Para tal feito, far-se-á um teste-quiquadrado para validação de uma hipótese. 
+O nível de significa será de $\alpha=$ `alpha`. Ou seja, se o p-valor do teste for menor que $\alpha=$, rejetar-se-á a hipótese nula.
+
+Uma suposição de que a proporção de votos é distribuida igualmente entre os votos sim, não e abstenção.
+
+#### Teste e seus resultados
+
+```{r teste_qui_prop,echo=FALSE,message=FALSE}
+
+prop_humanas=c(sum(Humanas$sim),sum(Humanas$nao),sum(Humanas$abstencao))/sum(Humanas$total)
+
+prop_exatas=c(sum(Exatas$sim),sum(Exatas$nao),sum(Exatas$abstencao))/sum(Exatas$total)
+
+prop_artes=c(sum(Artes$sim),sum(Artes$nao),sum(Artes$abstencao))/sum(Artes$total)
+
+prop_tecnologicas=c(sum(Tecnologicas$sim),sum(Tecnologicas$nao),sum(Tecnologicas$abstencao))/sum(Tecnologicas$total)
+
+prop_biologicas=c(sum(Biologicas$sim),sum(Biologicas$nao),sum(Biologicas$abstencao))/sum(Biologicas$total)
+
+
+esp=rbind(c(4/6,1/6,1/6),rep(1/3,3),c(1/6,1/6,4/6),c(4/6,1/6,1/6),c(1/6,1/6,4/6))
+
+obs=rbind(prop_artes,prop_biologicas,prop_exatas,prop_humanas,prop_tecnologicas)
+
+
+
+p_valor=chisq.test(obs,p=esp)$p.value
+
+
+
+```
+
+Temos que o p-valor é aproximadamente de: `r p_valor` 
 
 ## Estatísticas por Instituto
 
@@ -357,26 +419,56 @@ regularesGrad[i] = ifelse(length(filter(alunosMatricPorInst,SIGLA == as.characte
 }
 
 dadosporInstituto = data.frame(cbind(data.InstitutosRei,regularesGrad))
-#colnames(dadosporInstituto) = c("Instituto","Não","total","abstenção","proporção de Nãos","Alunos Regulares")    #alguem pode ajudar aqui??? porque não funciona?
-library(DT)
-datatable(data=dadosporInstituto,class = 'cell-border stripe')
-
-
+head(dadosporInstituto)
+LIIC = as.numeric(dadosporInstituto[,5])- qnorm(.975) * (sqrt(4*as.numeric(dadosporInstituto[,3])))^(-1)
+LSIC = as.numeric(dadosporInstituto[,5]) + qnorm(.975) * (sqrt(4*as.numeric(dadosporInstituto[,3])))^(-1)
+dadosporInstituto2 = data.frame(cbind(dadosporInstituto,LIIC,LSIC))
 ```
 
 ```{r GraficoDeDispersão,echo = FALSE}
 #não sei porque o grafico não está sendo plotado, alguem manja? 
 library(ggplot2)
-p1 = as.numeric(dadosporInstituto$naoInstituto)/as.numeric(dadosporInstituto$totalInstituto)
-p2 = as.numeric(dadosporInstituto$totalInstituto)/as.numeric(dadosporInstituto$regularesGrad)
-siglas = as.character(dadosporInstituto$V1)
-ggplot(dadosporInstituto, aes(x=p2, y=p1)) +
+p1 = as.numeric(dadosporInstituto2$naoInstituto)/as.numeric(dadosporInstituto2$totalInstituto)
+p2 = as.numeric(dadosporInstituto2$totalInstituto)/as.numeric(dadosporInstituto2$regularesGrad)
+siglas = as.character(dadosporInstituto2$V1)
+ggplot(dadosporInstituto2, aes(x=p2, y=p1)) +
   geom_point() +
   geom_text(label=siglas) + labs(x = "Proporção de votos em relação ao total de alunos regularmente Matriculados do instituto") + labs(y = "proporção de Votos Contra a greve")
+```
 
+```{r representaçãoGraficaDosICS,echo=FALSE,eval=TRUE}
+library(ggplot2)
+graf<- ggplot(dadosporInstituto2, aes(x = as.numeric(dadosporInstituto2[,1]), y = dadosporInstituto2[,5])) +
+  geom_point(size = 1) +
+  geom_errorbar(aes(ymax = dadosporInstituto2[,8], ymin = dadosporInstituto2[,7]))
+graf
+```
+
+```{r NnecessarioIC,echo=FALSE, results="hide"}
+tamanhoIC = 0.1
+N = (1/4) *(2*qnorm(0.975)/tamanhoIC)^2
+Nnecessario = ceiling(N)
+```
+
+```{r tabelaAmostraNecessaria,echo=FALSE}
+tabelaNnecessario = data.frame(Instituto = dadosporInstituto2[,1],Total_Instituto = dadosporInstituto2[,3],Tamanho_de_Amostra_Necessario = Nnecessario,votosFaltantes = (Nnecessario - as.numeric(dadosporInstituto2[,3])))
+```
+
+```{r tabelaInstituto,echo=FALSE}
+library(DT)
+datatable(data=dadosporInstituto2,class = 'cell-border stripe')
+```
+
+A fim de conseguirmos Intervalos de confiança para proporção de votos "não" por Instituto de tamanho `r tamanhoIC` com coeficientes de confiança de 95%, devemos ter `r Nnecessario` votos para cada Instituto. A tabela abaixo mostra o total de votos de cada Instituto, a quantidade mínima nescessária para atingir o IC desejado e a quantidade de votos faltantes para atingir essa quantidade para cada Instituto.
+
+```{r tabela,echo=FALSE}
+library(DT)
+datatable(data=tabelaNnecessario,class = 'cell-border stripe')
 ```
 
 ### Estatísticas por curso
+
+Abaixo, temos um gráfico interativo, com os quais pode-se obter informações, sobre o total de votantes,suas respectivas escolhas, proporção de votos negativos, seu intervalo de confiança, dados relativos a sua área de estudos, total de estudantes em cada curso e a qual instituto pertence.  
 
 ```{r,echo=FALSE,message=FALSE}
 slccursos=seq(1,nrow(mytbl),1)
@@ -386,7 +478,7 @@ selectInput("curso","Escolha o curso desejado:", choices=slccursos)
 #textInput("curso","Escolha o curso desejado:",)
 ```
 
-```{r,echo=FALSE,message=FALSE, echo = FALSE}
+```{r,echo=FALSE,message=FALSE}
 
 renderTable(mytbl[as.integer(input$curso),5:10])
 
@@ -397,20 +489,6 @@ renderPlot(barplot(as.integer(mytbl[as.integer(input$curso),5:7]),main=paste(myt
 options=list(width="100%", height="100%")
 ```
 
-
-
-```{r plot_gauge, echo = FALSE, message = FALSE}
-
-## Gauge Plots
-
-tbl0 = subset(mytbl, nivel=='Graduacao')
-tbl0$pnao = round(tbl0$nao/tbl0$total*100, 0)
-gauge = gvisGauge(tbl0[, c('curso', 'pnao')], 'curso', 'nao',
-                  options=list(min=0, max=100, greenFrom=0,
-                                 greenTo=20, yellowFrom=40, yellowTo=60,
-                                 redFrom=80, redTo=100, width=400, height=300))
-plot(gauge)
-```
 
 ```{r enderecos, echo = FALSE, message = FALSE}
 ends = read.table('institutos.tab', sep='\t', header=TRUE)
